--- a/_posts/2017-03-20-notices.md
+++ b/_posts/2017-03-20-notices.md
@@ -4,7 +4,7 @@ title: 'Notice blocks'
 tags:
   - dactl
   - howto
-hero: https://source.unsplash.com/collection/345758/
+hero: uploads/me.png
 overlay: purple
 ---
 
